use proper caches for player & entity config caches